@@ -2,7 +2,6 @@ Lwt
 Lwt_util
 Lwt_stream
 Lwt_sequence
-Lwt_monitor
 Lwt_mvar
 Lwt_mutex
 Lwt_list
